discussion/kv_engine/165104/165104_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49207: Make bgFetch take StoredValue& rather than DocKey&

In a future change we will use a "token" of the item in the
HashTable at the point of starting the BgFetch to determine if the
completion is allowed to replace the item that is there.

Change-Id: I579f83487b944c7d1352ac39245fcd4eaaf1a61c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-11-15 08:56:52.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-15 09:12:27.000000000
Message: 
Patch Set 9: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35446/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_vb.cc:745:10:
error: call to deleted constructor of "SerialisedDocKey"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35446/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41739/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_vb.cc(745): error C2280: "SerialisedDocKey::SerialisedDocKey(const SerialisedDocKey &)": attempting to reference a deleted function ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41739/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13967/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_vb.cc:745:10: error: call to deleted constructor of "SerialisedDocKey" [clang-diagnostic-error]
    auto key = v.getKey();
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/storeddockey.h:208:5: note: "SerialisedDocKey" has been explicitly marked deleted here
    SerialisedDocKey(const SerialisedDocKey& obj) = delete;
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13967/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_vb.cc:745:10:
error: call to deleted constructor of "SerialisedDocKey" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13967/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14761/ : FAILURE

Compile error at [2021-11-15T08:59:53.054Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/ep_vb.cc:745:10:
error: call to deleted constructor of "SerialisedDocKey"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14761/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15869/ : FAILURE

Compile error at [2021-11-15T09:10:43.901Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_vb.cc:745:25:
error: use of deleted function ?SerialisedDocKey::SerialisedDocKey(const SerialisedDocKey&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15869/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3603/ : FAILURE

Compile error at [2021-11-15T08:59:28.372Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_vb.cc:745:10:
error: call to deleted constructor of "SerialisedDocKey"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3603/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15588/ : FAILURE

Compile error at [2021-11-15T09:10:55.094Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_vb.cc:745:25:
error: use of deleted function ?SerialisedDocKey::SerialisedDocKey(const SerialisedDocKey&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15588/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3677/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23947/ : FAILURE

Compile error at [2021-11-15T09:11:23.000Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_vb.cc:745:10:
error: call to deleted constructor of "SerialisedDocKey"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23947/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16585/ : FAILURE

Compile error at [2021-11-15T09:10:05.040Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_vb.cc:745:10:
error: call to deleted constructor of "SerialisedDocKey"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16585/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12771/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
